# ScenarioSelectorPython

./: .gitignore  README.md  setup.cfg  setup.py
ScenarioSelector/: Exceptions.py  PivotRules.py  ScenarioSelector.py  __init__.py
scenarioselector/: __init__.py  exceptions.py  pivot_dimensions.py  pivot_generators.py  pivot_trials.py  scatter_plot.py  scenario_selector.py
src/scenarioselector/: __init__.py  exceptions.py  graphics.py  pivot_dimensions.py  pivot_generators.py  pivot_rule.py  pivot_rules.py  pivot_scenarios.py  pivot_trials.py  pivot_variable.py  scatter_plot.py  scenario_selector.py
