[metadata]
name = scenarioselector
version = 0.1.0
author = Mark Philip Owen
author_email = mark.p.owen@gmail.com
description = An algorithm to select scenarios from a data set to hit a target
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markpowen/ScenarioSelectorPython
project_urls =
    Bug Tracker = https://github.com/markpowen/ScenarioSelectorPython/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
