[metadata]
name = scenarioselector
version = 0.1.4
author = Mark Philip Owen
author_email = mark.p.owen@gmail.com
description = The scenario selection algorithm selects a maximal subset of scenarios from a scenario set, so that the selected scenarios have specified means (or sums).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markpowen/ScenarioSelectorPython
project_urls =
    Bug Tracker = https://github.com/markpowen/ScenarioSelectorPython/issues
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.18.0
    pandas>=1.0.0
python_requires = >=3.7.1

[options.packages.find]
where = src
